--- a/TCR/Taxes.html
+++ b/TCR/Taxes.html
@@ -9,7 +9,10 @@ body {
 </style>
 </head>
 <body>
-<div>test</div>
+<div>You have: <span id="money"></span> Dollars</div>
+<div>There is: <span id="corruption"></span> Corruption</div>
+<button onclick="actCorrupt()">Corrupt Politicians</button>
+<button onclick="actBuyHouseAttempt()">Buy House</button>
 <script src="Taxes.js"></script>
 </body>
 </html>
