Fix floating point + add house

--- a/TCR/Taxes.html
+++ b/TCR/Taxes.html
@@ -12,7 +12,10 @@ body {
 <div>You have: <span id="money"></span> Dollars</div>
 <div>There is: <span id="corruption"></span> Corruption</div>
 <button onclick="actCorrupt()">Corrupt Politicians</button>
-<button onclick="actBuyHouseAttempt()">Buy House</button>
+<div>
+You have: <span id="houses"></span> Houses, which give you <span id="moneyDir"></span> Dollars per second.
+<button onclick="actBuyHouseAttempt()">Buy House<span id="houseCost"></span></button>
+</div>
 <script src="Taxes.js"></script>
 </body>
 </html>
