--- a/TCR/Taxes.html
+++ b/TCR/Taxes.html
@@ -16,6 +16,10 @@ body {
 You have: <span id="houses"></span> Houses, which give you <span id="moneyDir"></span> Dollars per second.
 <button onclick="actBuyHouseAttempt()">Buy House<span id="houseCost"></span></button>
 </div>
+<div>
+You have: <span id="lobbyists"></span> Lobbyist, which generate <span id="corruptionDir"></span> Corruption per second.
+<button onclick="actBuyLobbyAttempt()">Hire Lobbyists<span id="lobbyCost"></span></button>
+</div>
 <script src="Taxes.js"></script>
 </body>
 </html>
